# microROS_remote_lab

./: .gitignore  Dockerfile  README.md  docker-compose.yml
edrys_config/: class-QccS75XG8dBciL4h.json  class-QccS75XG8dBciL4h.yml  class-n9OX5IKnHxSeM3FC.json  class-n9OX5IKnHxSeM3FC.yml
workspace/microros_teensy/: microros_teensy.ino
workspace/ros2_ws/src/Teensy_Firmware/: Teensy_Firmware.ino
workspace/ros2_ws/src/asrs_bridge/: setup.py
workspace/ros2_ws/src/asrs_bridge/asrs_bridge/: teensy_bridge.py
workspace/ros2_ws/src/asrs_description/: package.xml
workspace/ros2_ws/src/asrs_moveit_config/: package.xml
workspace/ros2_ws/src/asrs_moveit_config/config/: asrs_robot.srdf  joint_limits.yaml
workspace/ros2_ws/src/asrs_pickplace/: setup.cfg  setup.py
workspace/ros2_ws/src/asrs_robot/asrs_bridge/: package.xml  setup.cfg
workspace/ros2_ws/src/asrs_robot/asrs_description/: CMakeLists.txt
workspace/ros2_ws/src/asrs_robot/asrs_description/urdf/: asrs_robot.urdf.xacro
workspace/ros2_ws/src/asrs_robot/asrs_firmware/: asrs_firmware.ino
workspace/ros2_ws/src/asrs_robot/asrs_moveit_config/: CMakeLists.txt
workspace/ros2_ws/src/asrs_robot/asrs_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  trajectory_execution.yaml
workspace/ros2_ws/src/asrs_robot/asrs_moveit_config/launch/: bringup.launch.py
workspace/ros2_ws/src/asrs_robot/asrs_pickplace/: package.xml
workspace/ros2_ws/src/asrs_robot/asrs_pickplace/asrs_pickplace/: pick_place_node.py
workspace/ros2_ws/src/my_ik_solution/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/my_ik_solution/launch/: ik_demo.launch.py
workspace/ros2_ws/src/my_ik_solution/my_ik_solution/: fk_node.py  ik_node.py  workspace_node.py
workspace/test/: test.ino
